--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <nav class="navbar navbar-default" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" ui-sref="movies">FormulaOne Stats App</a>
+          <a class="navbar-brand" ui-sref="drivers">FormulaOne Stats App</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a ui-sref="movies">Home</a></li>
+            <li class="active"><a ui-sref="drivers">Home</a></li>
           </ul>
         </div>
       </div>
@@ -33,10 +33,10 @@
     </div>
 
     <script type="text/javascript" src="./lib/angular.js"></script>
+    <script type="text/javascript" src="./lib/angular-ui-router.js"></script>
+    <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
     <script type="text/javascript" src="./js/controllers.js"></script>
     <script type="text/javascript" src="./js/services.js"></script>
-    <script type="text/javascript" src="./lib/angular-ui-router.min.js"></script>
-    <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
   </body>
 </html>
