--- a/index.html
+++ b/index.html
@@ -10,9 +10,19 @@
     <meta name="mobile-web-app-capable" content="yes"/>
     <title>Formula One .:. Stats</title>
 
-    <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"/>
+    <!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"/> -->
     <link rel="stylesheet" type="text/css" href="./css/googlefonts.css"/>
     <link rel="stylesheet" type="text/css" href="./css/style.css"/>
+
+
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.8/angular.js"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
+  <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+  <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
+
+
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -45,7 +55,6 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="./lib/angular.js"></script>
     <script type="text/javascript" src="./lib/angular-ui-router.js"></script>
     <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
