--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <script src="./lib/jquery-2.1.1.min.js"></script>
     <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
+    <script type="text/javascript" src="./lib/angular-ui-router.js"></script>
+    <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
 
 
     <script>
@@ -38,11 +40,11 @@
     <nav class="navbar navbar-default" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" ui-sref="drivers">FormulaOne Stats App</a>
+          <a class="navbar-brand" ui-sref="drivers({season:season})">FormulaOne Stats App</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a ui-sref="drivers">Home</a></li>
+            <li class="active"><a ui-sref="drivers({season:season})">Home</a></li>
           </ul>
         </div>
       </div>
@@ -55,8 +57,7 @@
       </div>
     </div>
 
-    <script type="text/javascript" src="./lib/angular-ui-router.js"></script>
-    <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
+
     <script type="text/javascript" src="./js/app.js"></script>
     <script type="text/javascript" src="./js/controllers.js"></script>
     <script type="text/javascript" src="./js/services.js"></script>
