--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
     <nav class="navbar navbar-default" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" ui-sref="drivers({season:season})">FormulaOne Stats App</a>
+          <a class="navbar-brand" ui-sref="drivers({season:season})">Driver Standings</a>
+          <a class="navbar-brand" ui-sref="circuits({season:season})">Circuits</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a ui-sref="drivers({season:season})">Home</a></li>
+            <li class="active"><a ui-sref="drivers({season:season})">Driver Standings</a></li>
+            <li><a ui-sref="circuits({season:season})">Circuits</a></li>
           </ul>
         </div>
       </div>
