driver view tweak

--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Description" content="Formula One statistics"/>
+    <meta name="Description" content="Browse over 50 years of Formula One statistics"/>
 
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
+
+
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+	<meta name="mobile-web-app-capable" content="yes"/>
+
+	<meta property="og:title" content="FlappyJS - My Browser Version of FlappyBird"/>
+	<meta property="og:description" content="Browse over 50 years of Formula One statistics"/>
+	<!-- <meta property="og:image" content="http://jewkesy.github.io/Flappy/images/thumbnail.png"/> -->
+	<meta property="og:url" content="http://jewkesy.github.io/FormulaOne/"/>
+	<meta property="og:type" content="website"/>
+
+
     <title>Formula One .:. Stats</title>
 
     <!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"/> -->
