--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
     <script type="text/javascript" src="./lib/angular-ui-router.js"></script>
     <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
 
-
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -56,29 +55,39 @@
     </script>
   </head>
   <body>
-    <nav class="navbar navbar-default" role="navigation">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <a class="navbar-brand" ui-sref="drivers({season:season})">Driver Standings</a>
-          <a class="navbar-brand" ui-sref="circuits({season:season})">Circuits</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a ui-sref="drivers({season:season})">Driver Standings</a></li>
-            <li><a ui-sref="circuits({season:season})">Circuits</a></li>
-          </ul>
-        </div>
+    <header class="navbar-inverse" role="banner">
+      <div class="container">
+        <nav role="navigation">
+          <div class="container-fluid">
+            <div class="navbar-header">
+              <a class="navbar-brand" ui-sref="drivers({season:season})">Driver Standings</a>
+              <a class="navbar-brand" ui-sref="circuits({season:season})">Circuits</a>
+            </div>
+            <div class="collapse navbar-collapse">
+              <ul class="nav navbar-nav">
+                <li class="dropdown">
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
+                  <ul class="dropdown-menu">
+                    <li class="active"><a ui-sref="drivers({season:season})">Driver Standings</a></li>
+                    <li><a ui-sref="circuits({season:season})">Circuits</a></li>
+                  </ul>
+                </li>
+
+
+              </ul>
+            </div>
+          </div>
+        </nav>
       </div>
-    </nav>
-    <div class="container">
-      <div class="row top-buffer">
-        <div class="col-xs-8 col-xs-offset-2">
-          <div ui-view></div> <!-- This is where our views will load -->
+    </header>
+      <div class="container">
+        <div class="row top-buffer">
+          <div class="col-xs-8 col-xs-offset-2">
+            <div ui-view></div> <!-- This is where our views will load -->
+          </div>
         </div>
       </div>
     </div>
-
-
     <script type="text/javascript" src="./js/app.js"></script>
     <script type="text/javascript" src="./js/controllers.js"></script>
     <script type="text/javascript" src="./js/services.js"></script>
