--- a/index.html
+++ b/index.html
@@ -58,13 +58,22 @@
     <header class="navbar-inverse" role="banner">
       <div class="container">
         <nav role="navigation">
-          <div class="container-fluid">
+
             <div class="navbar-header">
-              <a class="navbar-brand" ui-sref="drivers({season:season})">Driver Standings</a>
-              <a class="navbar-brand" ui-sref="circuits({season:season})">Circuits</a>
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" ui-sref="drivers({season:season})">FormulaOne App</a>
             </div>
-            <div class="collapse navbar-collapse">
+
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
               <ul class="nav navbar-nav">
+                <li class="active"><a ui-sref="drivers({season:season})">Driver Standings</a></li>
+                <li><a ui-sref="circuits({season:season})">Circuits</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                   <ul class="dropdown-menu">
@@ -72,17 +81,15 @@
                     <li><a ui-sref="circuits({season:season})">Circuits</a></li>
                   </ul>
                 </li>
-
-
               </ul>
             </div>
-          </div>
+
         </nav>
       </div>
     </header>
       <div class="container">
-        <div class="row top-buffer">
-          <div class="col-xs-8 col-xs-offset-2">
+        <div class="row">
+          <div class="col-sn-12">
             <div ui-view></div> <!-- This is where our views will load -->
           </div>
         </div>
