--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
               <ul class="nav navbar-nav">
-                <li class="active"><a ui-sref="drivers({season:season})">Driver Standings</a></li>
+                <li class="active"><a ui-sref="drivers({season:season})">Drivers</a></li>
                 <li><a ui-sref="circuits({season:season})">Circuits</a></li>
-                <li class="dropdown">
+                <li><a ui-sref="constructors({season:season})">Constructors</a></li>
+                <!-- <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                   <ul class="dropdown-menu">
                     <li class="active"><a ui-sref="drivers({season:season})">Driver Standings</a></li>
                     <li><a ui-sref="circuits({season:season})">Circuits</a></li>
                   </ul>
-                </li>
+                </li> -->
               </ul>
             </div>
 
