--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
               <a class="navbar-brand" ui-sref="drivers({season:season})">FormulaOne App</a>
             </div>
 
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="headerController">
               <ul class="nav navbar-nav">
-                <li class="active"><a ui-sref="drivers({season:season})">Drivers</a></li>
-                <li><a ui-sref="circuits({season:season})">Circuits</a></li>
-                <li><a ui-sref="constructors({season:season})">Constructors</a></li>
+                <li ng-class="{ active: isActive('/drivers')}"><a ui-sref="drivers({season:season})">Drivers</a></li>
+                <li ng-class="{ active: isActive('/circuits')}"><a ui-sref="circuits({season:season})">Circuits</a></li>
+                <li ng-class="{ active: isActive('/constructors')}"><a ui-sref="constructors({season:season})">Constructors</a></li>
                 <!-- <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                   <ul class="dropdown-menu">
