--- a/index.html
+++ b/index.html
@@ -9,26 +9,16 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
 
+  	<meta property="og:title" content="FormulaOneStats"/>
+  	<meta property="og:description" content="Browse over 50 years of Formula One statistics"/>
+  	<!-- <meta property="og:image" content="http://jewkesy.github.io/Flappy/images/thumbnail.png"/> -->
+  	<meta property="og:url" content="http://jewkesy.github.io/FormulaOne/"/>
+  	<meta property="og:type" content="website"/>
 
-	<meta name="apple-mobile-web-app-capable" content="yes"/>
-	<meta name="mobile-web-app-capable" content="yes"/>
+    <title>.: FormulaOneStats :.</title>
 
-	<meta property="og:title" content="FlappyJS - My Browser Version of FlappyBird"/>
-	<meta property="og:description" content="Browse over 50 years of Formula One statistics"/>
-	<!-- <meta property="og:image" content="http://jewkesy.github.io/Flappy/images/thumbnail.png"/> -->
-	<meta property="og:url" content="http://jewkesy.github.io/FormulaOne/"/>
-	<meta property="og:type" content="website"/>
-
-
-    <title>Formula One .:. Stats</title>
-
-    <!-- <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css"/> -->
     <link rel="stylesheet" type="text/css" href="./css/googlefonts.css"/>
     <link rel="stylesheet" type="text/css" href="./css/style.css"/>
-
-<!--
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css"> -->
 
 
     <!-- Latest compiled and minified CSS -->
@@ -66,7 +56,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" ui-sref="drivers({season:season})">FormulaOne App</a>
+              <a class="navbar-brand" ui-sref="drivers({season:season})">FormulaOneStats</a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="headerController">
