--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@
         </div>
       </div>
     </div>
+    <script type="text/javascript" src="./js/config.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
     <script type="text/javascript" src="./js/controllers.js"></script>
     <script type="text/javascript" src="./js/services.js"></script>
