add results tab, showing list schedule for now

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                 <li ng-class="{ active: isActive('/drivers')}"><a ui-sref="drivers({season:season})">Drivers</a></li>
                 <li ng-class="{ active: isActive('/circuits')}"><a ui-sref="circuits({season:season})">Circuits</a></li>
                 <li ng-class="{ active: isActive('/constructors')}"><a ui-sref="constructors({season:season})">Constructors</a></li>
+                <li ng-class="{ active: isActive('/results')}"><a ui-sref="results({season:season})">Results</a></li>
                 <!-- <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
                   <ul class="dropdown-menu">
