--- a/index.html
+++ b/index.html
@@ -27,11 +27,13 @@
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
 
-    <script src="./lib/angular.js"></script>
-    <script src="./lib/jquery-2.1.1.min.js"></script>
-    <script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
+    <script type="text/javascript" src="./lib/angular.js"></script>
+    <script type="text/javascript" src="./lib/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
     <script type="text/javascript" src="./lib/angular-ui-router.js"></script>
     <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
+    <script type="text/javascript" src="./lib/isotope.pkgd.min.js"></script>
+    <script type="text/javascript" src="./lib/angular-isotope.min.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
