updates to page titles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   	<meta property="og:url" content="http://jewkesy.github.io/FormulaOne/"/>
   	<meta property="og:type" content="website"/>
 
-    <title>.: FormulaOneStats :.</title>
+    <title ng-bind="title">.: FormulaOneStats :.</title>
 
     <link rel="stylesheet" type="text/css" href="./css/googlefonts.css"/>
     <link rel="stylesheet" type="text/css" href="./css/style.css"/>
