--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <body>
     <header class="navbar-inverse" role="banner">
       <div class="container">
-        <nav role="navigation">
+        <nav role="navigation"  ng-controller="headerController">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
@@ -58,7 +58,7 @@
               <a class="navbar-brand" ui-sref="drivers({season:season})">FormulaOneStats</a>
             </div>
 
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" ng-controller="headerController">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
               <ul class="nav navbar-nav">
                 <li ng-class="{ active: isActive('/drivers')}"><a ui-sref="drivers({season:season})">Drivers</a></li>
                 <li ng-class="{ active: isActive('/circuits')}"><a ui-sref="circuits({season:season})">Circuits</a></li>
