--- a/index.html
+++ b/index.html
@@ -76,12 +76,17 @@
         </nav>
       </div>
     </header>
-      <div class="container">
-        <div class="row">
-          <div class="col-sn-12">
-            <div ui-view></div> <!-- This is where our views will load -->
-          </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-sn-12">
+          <div ui-view></div> <!-- This is where our views will load -->
         </div>
+      </div>
+    </div>
+
+    <div class="footer navbar-fixed-bottom">
+      <div class="container">
+        <p class="text-muted credit">Created by <a target="_blank" href="http://www.daryljewkes.com">Daryl Jewkes</a> .:. Formula One data from <a target="_blank" href="http://ergast.com/mrd/">Ergast</a></p>
       </div>
     </div>
 
