localised a few resource files; starting cosmetic work on results

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     <link rel="stylesheet" type="text/css" href="./css/googlefonts.css"/>
 
     <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./lib/bootstrap.min.css">
 
     <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap-theme.min.css">
+    <link rel="stylesheet" href="./lib/bootstrap-theme.min.css">
 
     <link rel="stylesheet" type="text/css" href="./css/style.css"/>
 
     <script type="text/javascript" src="./lib/angular.min.js"></script>
     <script type="text/javascript" src="./lib/jquery-2.1.1.min.js"></script>
-    <script type="text/javascript" src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.10.0.js"></script>
+    <script type="text/javascript" src="./lib/ui-bootstrap-tpls-0.12.1.min.js"></script>
     <script type="text/javascript" src="./lib/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
 
@@ -95,6 +95,6 @@
     <script type="text/javascript" src="./js/controllers.js"></script>
     <script type="text/javascript" src="./js/services.js"></script>
     <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
+    <script src="./lib/bootstrap.min.js"></script>
   </body>
 </html>
