--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 
     <link rel="stylesheet" type="text/css" href="./css/style.css"/>
 
+    <script type="text/javascript" src="./js/utils.js"></script>
+
     <script type="text/javascript" src="./lib/angular.min.js"></script>
     <script type="text/javascript" src="./lib/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="./lib/ui-bootstrap-tpls-0.12.1.min.js"></script>
