added latest version of angular and modules used

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
 
     <script type="text/javascript" src="./js/utils.js"></script>
 
-    <script type="text/javascript" src="./lib/angular.min.js"></script>
+    <script type="text/javascript" src="https://code.angularjs.org/1.3.15/angular.js"></script>
     <script type="text/javascript" src="./lib/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="./lib/ui-bootstrap-tpls-0.12.1.min.js"></script>
     <script type="text/javascript" src="./lib/angular-ui-router.min.js"></script>
-    <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
+    <script type="text/javascript" src="https://code.angularjs.org/1.3.15/angular-resource.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -49,7 +49,7 @@
   <body>
     <header class="navbar-inverse" role="banner">
       <div class="container">
-        <nav role="navigation" ng-controller="headerController">
+        <nav role="navigation" ng-controller="HeaderController">
             <div class="navbar-header">
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
@@ -87,7 +87,7 @@
       </div>
     </div>
 
-    <div class="footer navbar-fixed-bottom" ng-controller="footerController">
+    <div class="footer navbar-fixed-bottom" ng-controller="FooterController">
       <div class="container">
         <p class="text-muted credit">Created by <a target="_blank" href="http://www.daryljewkes.com">Daryl Jewkes</a> .:. Formula One data from <a target="_blank" href="http://ergast.com/mrd/">Ergast</a> .:. Copyright &copy; {{currentDate | date:'yyyy'}}</p>
       </div>
