--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
     <script type="text/javascript" src="./js/utils.js"></script>
 
-    <script type="text/javascript" src="https://code.angularjs.org/1.3.15/angular.js"></script>
+    <script type="text/javascript" src="./lib/angular.min.js"></script>
     <script type="text/javascript" src="./lib/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="./lib/angular-ui-router.min.js"></script>
-    <script type="text/javascript" src="https://code.angularjs.org/1.3.15/angular-resource.js"></script>
+    <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
