--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <script type="text/javascript" src="./lib/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="./lib/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
+    <script type="text/javascript" src="./lib/angular-sanitize.min.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
