--- a/index.html
+++ b/index.html
@@ -50,13 +50,15 @@
       <div class="container">
         <nav role="navigation" ng-controller="HeaderController">
             <div class="navbar-header">
+
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" ui-sref="drivers({season:season})">FormulaOneStats</a>
+
+              <a class="navbar-brand" ui-sref="drivers({season:season})"><img height="30px" src="./images/f1_logo.png" /></a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -66,13 +68,6 @@
                 <li ng-class="{ active: isActive('/circuits')}"><a ui-sref="circuits({season:season})">Circuits</a></li>
                 <li ng-class="{ active: isActive('/constructors')}"><a ui-sref="constructors({season:season})">Constructors</a></li>
                 <li ng-class="{ active: isActive('/results')}"><a ui-sref="results({season:season})">Results / Race Schedule</a></li>
-                <!-- <li class="dropdown">
-                  <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                  <ul class="dropdown-menu">
-                    <li class="active"><a ui-sref="drivers({season:season})">Driver Standings</a></li>
-                    <li><a ui-sref="circuits({season:season})">Circuits</a></li>
-                  </ul>
-                </li> -->
               </ul>
             </div>
         </nav>
