--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   	<meta property="og:type" content="website"/>
 
     <title ng-bind="title">.: FormulaOneStats :.</title>
+    <link rel="shortcut icon" type="image/png" href="./favicon.ico"/>
 
     <link rel="stylesheet" type="text/css" href="./css/googlefonts.css"/>
 
