--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   	<meta property="og:url" content="http://jewkesy.github.io/FormulaOne/"/>
   	<meta property="og:type" content="website"/>
 
-    <title ng-bind="title">.: FormulaOneStats :.</title>
+    <title ng-bind="title">Formula One Stats</title>
     <link rel="shortcut icon" type="image/png" href="./favicon.ico"/>
 
     <link rel="stylesheet" type="text/css" href="./css/googlefonts.css"/>
