page meta tweaks

--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
+    <meta name="robots" content="index,follow">
+    <meta name="keywords" content="F1, Formula One, AngularJS, MongoDB, statistics" />
 
   	<meta property="og:title" content="FormulaOneStats"/>
-  	<meta property="og:description" content="Browse over 50 years of Formula One statistics"/>
+  	<meta property="og:description" content="F1 Formula One statistics obtained from over 50 years"/>
   	<!-- <meta property="og:image" content="http://jewkesy.github.io/Flappy/images/thumbnail.png"/> -->
   	<meta property="og:url" content="http://jewkesy.github.io/FormulaOne/"/>
   	<meta property="og:type" content="website"/>
