--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="Description" content="Browse over 50 years of Formula One statistics"/>
+    <meta name="Description" content="F1 Formula One statistics obtained from over 50 years"/>
 
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="mobile-web-app-capable" content="yes"/>
     <meta name="robots" content="index,follow">
     <meta name="keywords" content="F1, Formula One, AngularJS, MongoDB, statistics" />
 
-  	<meta property="og:title" content="FormulaOneStats"/>
+  	<meta property="og:title" content="F1 .:. Formula One Stats"/>
   	<meta property="og:description" content="F1 Formula One statistics obtained from over 50 years"/>
   	<!-- <meta property="og:image" content="http://jewkesy.github.io/Flappy/images/thumbnail.png"/> -->
   	<meta property="og:url" content="http://jewkesy.github.io/FormulaOne/"/>
