--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="./lib/bootstrap.min.css">
-
+    <link rel="stylesheet" href="./lib/angular-chart.css">
 
 
     <link rel="stylesheet" type="text/css" href="./css/style.css"/>
@@ -36,7 +36,8 @@
     <script type="text/javascript" src="./lib/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
     <script type="text/javascript" src="./lib/angular-sanitize.min.js"></script>
-
+    <script type="text/javascript" src="./lib/chart.min.js"></script>
+    <script type="text/javascript" src="./lib/angular-chart.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
