changed the default url to redirect to news page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 <span class="icon-bar"></span>
               </button>
 
-              <a class="navbar-brand" ui-sref="drivers({season:season})"><img height="30px" src="./images/f1_logo.png" /></a>
+              <a class="navbar-brand" ui-sref="news({season:season})"><img height="30px" src="./images/f1_logo.png" /></a>
             </div>
 
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
