--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css"/>
 
     <script type="text/javascript" src="./js/utils.js"></script>
-
-    <script type="text/javascript" src="./lib/angular.min.js"></script>
     <script type="text/javascript" src="./lib/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="./lib/angular.min.js"></script>
+
     <script type="text/javascript" src="./lib/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
     <script type="text/javascript" src="./lib/angular-sanitize.min.js"></script>
     <script type="text/javascript" src="./lib/chart.min.js"></script>
-    <script type="text/javascript" src="./lib/angular-chart.js"></script>
+
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -91,13 +91,20 @@
       </div>
     </div>
 
+
+
+    <script type="text/javascript" src="./lib/angular-chart.js"></script>
+
+    <script type="text/javascript" src="./lib/jquery.isotope.js"></script>
+    <script type="text/javascript" src="./lib/angular-isotope.js"></script>
+
     <script type="text/javascript" src="./js/config.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
-    
-    
     <script type="text/javascript" src="./js/controllers.js"></script>
     <script type="text/javascript" src="./js/services.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="./lib/bootstrap.min.js"></script>
+
+
   </body>
 </html>
