fix to ordering

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <script type="text/javascript" src="./lib/angular-chart.js"></script>
 
-    <script type="text/javascript" src="./lib/jquery.isotope.js"></script>
+    // <script type="text/javascript" src="./lib/jquery.isotope.js"></script>
     <script type="text/javascript" src="./lib/angular-isotope.js"></script>
 
     <script type="text/javascript" src="./js/config.js"></script>
