added back in the minified libraries

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 
     <script type="text/javascript" src="./lib/angular-chart.js"></script>
 
-    <script type="text/javascript" src="./lib/jquery.isotope.js"></script>
-    <script type="text/javascript" src="./lib/angular-isotope.js"></script>
+    <script type="text/javascript" src="./lib/jquery.isotope.min.js"></script>
+    <script type="text/javascript" src="./lib/angular-isotope.min.js"></script>
 
     <script type="text/javascript" src="./js/config.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
