news styling tweaks

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </head>
   <body>
     <header class="navbar-inverse" role="banner">
-      <div class="container">
+      <div class="containe">
         <nav role="navigation" ng-controller="HeaderController">
             <div class="navbar-header">
 
@@ -71,7 +71,7 @@
                 <li ng-class="{ active: isActive('/drivers')}"><a ui-sref="drivers({season:season})">Drivers</a></li>
                 <li ng-class="{ active: isActive('/circuits')}"><a ui-sref="circuits({season:season})">Circuits</a></li>
                 <li ng-class="{ active: isActive('/constructors')}"><a ui-sref="constructors({season:season})">Constructors</a></li>
-                <li ng-class="{ active: isActive('/results')}"><a ui-sref="results({season:season})">Results / Race Schedule</a></li>
+                <li ng-class="{ active: isActive('/results')}"><a ui-sref="results({season:season})">Results &amp; Race Schedule</a></li>
               </ul>
             </div>
         </nav>
