dropped wiki linkks from constructor and driver views

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   </head>
   <body>
     <header class="navbar-inverse" role="banner">
-      <div class="containe">
+      <div class="container container-narrow">
         <nav role="navigation" ng-controller="HeaderController">
             <div class="navbar-header">
 
