split the 2y chart for ease

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script type="text/javascript" src="./lib/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
     <script type="text/javascript" src="./lib/angular-sanitize.min.js"></script>
-    <script type="text/javascript" src="./lib/chart.min.js"></script>
+    <script type="text/javascript" src="./lib/chart.2y.min.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
