--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <script type="text/javascript" src="./lib/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
     <script type="text/javascript" src="./lib/angular-sanitize.min.js"></script>
+
     <script type="text/javascript" src="./lib/chart.2y.min.js"></script>
 
     <script>
@@ -91,8 +92,6 @@
       </div>
     </div>
 
-
-
     <script type="text/javascript" src="./lib/angular-chart.js"></script>
 
     <script type="text/javascript" src="./lib/jquery.isotope.min.js"></script>
@@ -100,7 +99,17 @@
 
     <script type="text/javascript" src="./js/config.js"></script>
     <script type="text/javascript" src="./js/app.js"></script>
-    <script type="text/javascript" src="./js/controllers.js"></script>
+    <script type="text/javascript" src="./js/controllers/app.js"></script>
+    <script type="text/javascript" src="./js/controllers/news.js"></script>
+    <script type="text/javascript" src="./js/controllers/drivers.js"></script>
+    <script type="text/javascript" src="./js/controllers/driver.js"></script>
+    <script type="text/javascript" src="./js/controllers/constructors.js"></script>
+    <script type="text/javascript" src="./js/controllers/constructor.js"></script>
+    <script type="text/javascript" src="./js/controllers/circuits.js"></script>
+    <script type="text/javascript" src="./js/controllers/circuit.js"></script>
+    <script type="text/javascript" src="./js/controllers/results.js"></script>
+    <script type="text/javascript" src="./js/controllers/result.js"></script>
+    <!-- <script type="text/javascript" src="./js/controllers.js"></script> -->
     <script type="text/javascript" src="./js/services.js"></script>
     <!-- Latest compiled and minified JavaScript -->
     <script src="./lib/bootstrap.min.js"></script>
