--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="./lib/bootstrap.min.css">
     <link rel="stylesheet" href="./lib/angular-chart.css">
-
+    <link rel="stylesheet" href="./lib/vis.min.css">
 
     <link rel="stylesheet" type="text/css" href="./css/style.css"/>
 
@@ -38,6 +38,10 @@
     <script type="text/javascript" src="./lib/angular-sanitize.min.js"></script>
 
     <script type="text/javascript" src="./lib/chart.2y.min.js"></script>
+
+    <script type="text/javascript" src="./lib/moment.min.js"></script>
+    <script type="text/javascript" src="./lib/vis.min.js"></script>
+    <script type="text/javascript" src="./lib/angular-vis.js"></script>
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
