tweak to keep the top nav bar visible

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </script>
   </head>
   <body>
-    <header class="navbar-inverse" role="banner">
+    <header class="navbar-inverse navbar-fixed-top" role="banner">
       <div class="container container-narrow">
         <nav role="navigation" ng-controller="HeaderController">
             <div class="navbar-header">
