--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
       <div class="container container-narrow">
         <nav role="navigation" ng-controller="HeaderController">
             <div class="navbar-header">
-
               <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
@@ -82,7 +81,7 @@
         </nav>
       </div>
     </header>
-    <div class="container">
+    <div class="container bufferTop">
       <div class="row">
         <div class="col-sn-12">
           <div ui-view></div> <!-- This is where our views will load -->
