trying out chartjs v2 directives

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     <script type="text/javascript" src="./lib/angular-resource.min.js"></script>
     <script type="text/javascript" src="./lib/angular-sanitize.min.js"></script>
 
-    <script type="text/javascript" src="./lib/chart.2y.min.js"></script>
+ <!--    <script type="text/javascript" src="./lib/chart.2y.min.js"></script> -->
+ <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.1.3/Chart.min.js"></script>
 
     <script type="text/javascript" src="./lib/moment.min.js"></script>
     <script type="text/javascript" src="./lib/vis.min.js"></script>
@@ -97,7 +98,7 @@
     </div>
 
     <script type="text/javascript" src="./lib/angular-chart.js"></script>
-
+    <!-- <script type="text/javascript" src="./lib/angular-chartv2.min.js"></script> -->
     <script type="text/javascript" src="./lib/jquery.isotope.min.js"></script>
     <script type="text/javascript" src="./lib/angular-isotope.min.js"></script>
 
